update yaml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,12 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: test
+#     project: '**/Test/*.csproj'
+#     arguments: '--configuration $(buildConfiguration)'    
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
@@ -32,3 +38,15 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+  displayName: 'dotnet publish --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+  inputs:
+    command: publish
+    publishWebProjects: false
+    projects: 'TradeDataService/TradeDataService/TradeDataService.csproj'
+    arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+    zipAfterPublish: true
+    
+  - task: PublishBuildArtifacts@1
+    displayName: 'publish artifacts'
