Copy portfolio file

--- a/TradeDataService/TradeDataService.csproj
+++ b/TradeDataService/TradeDataService.csproj
@@ -8,5 +8,11 @@
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TradePortfolio.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 
 </Project>
